@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.67 2007-09-14 12:06:28 cmatsuoka Exp $
+$Id: ChangeLog,v 1.68 2007-09-14 13:49:33 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -51,6 +51,7 @@ Stable versions
 	- fixed S3M pan settings
 	- fixed IT old instrument volume mode setting
 	- fixed IT 16-bit sample loading (reported by Henrik Pauli)
+	- fixed IT effect S00 and delta samples (fixes O4UFRDMX.IT)
 	- fixed multi-retrig effect (reported by Henrik Pauli)
 	- fixed infinite loop scan (reported by Zbigniew Luszpinski)
 	- fixed Sinaria sample size and finetune
